--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.17.0",
+    "elevenlabs": "^0.18.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
     "openai": "^4.71.1",
