--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "clsx": "^2.1.1",
     "convex": "^1.17.0",
     "elevenlabs": "^0.18.0",
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
     "openai": "^4.71.1",
